added header and the logo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
 
   <body>
     <h2>Hello World, we are software developers!</h2>
+   <header id="header">
+
+    <img src="LogoMakr.png" id="header-img">
+
+
+   </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
+    
     <!--
 
     Hello Camper!
