Add navagition bar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
    <header id="header">
 
     <img src="LogoMakr.png" id="header-img">
-
-
+    <nav id="nav-bar">
+      <a href="#" class="nav-link">Link1</a>
+      <a href="#" class="nav-link">Link2</a>
+      <a href="3" class="nav-link">Link3</a>
+    </nav>
    </header>
 
 
@@ -29,7 +32,7 @@
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    
+
     <!--
 
     Hello Camper!
